Rearrange files in folders. Complete some docstrings.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   <body>
     <div id="map"></div>
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.14/cartodb.js"></script>
-    <script src="amtrak-trip.js"></script>
+    <script src="./web/amtrak-trip.js"></script>
   </body>
 </html>
